# vla_attention

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-runtime.txt  requirements.txt
configs/: experiments.yaml  libero_tasks.yaml  model.yaml
results/: phase1_libero.pkl  phase1_simpler.pkl  phase2_attention_rollout.pkl  phase2_head_taxonomy.pkl  phase2_logit_lens.pkl  phase2_modality.pkl  phase3_activation_patching.pkl  phase3_head_knockout.pkl  phase3_visual_ablation.pkl  phase4_grounding_rescue.pkl  phase4_is_scores.pkl  phase4_pruning.pkl  run_summary.json
scripts/: run_full_pipeline.py
src/vla_attention/: __init__.py  config.py
src/vla_attention/analysis/: __init__.py  attention_rollout.py  head_taxonomy.py  logit_lens.py  modality_dominance.py
src/vla_attention/causal/: __init__.py  activation_patching.py  head_knockout.py  visual_ablation.py
src/vla_attention/data_efficiency/: __init__.py  grounding_rescue.py  is_scoring.py
src/vla_attention/evaluation/: __init__.py  libero_eval.py  simpler_eval.py
src/vla_attention/hooks/: __init__.py  attention_hooks.py
src/vla_attention/models/: __init__.py  molmoact_wrapper.py
src/vla_attention/plotting/: __init__.py  fig1_teaser.py  fig2_modality_heatmap.py  fig3_head_taxonomy.py  fig4_attention_rollout.py  fig5_visual_ablation.py  fig6_head_knockout.py  fig7_data_efficiency.py  fig_bonus_activation_patching.py  fig_bonus_logit_lens.py  style.py
src/vla_attention/simulation/: __init__.py  synthetic_attention.py
tests/: test_synthetic.py  test_token_boundaries.py
(+2 files in other folders)
